--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@ The proposed method addresses limitations in existing cross-view localization me
                 <papertitle>Model Calibration in Dense Classification with Adaptive Label Perturbation</papertitle>
               </a>
               <br>
-	      J Liu, C Ye, <strong>S Wang<strong>, R Cui, J Zhang, K Zhang, N Barnes
+	      J Liu, C Ye, <strong>S Wang</strong>, R Cui, J Zhang, K Zhang, N Barnes
               <br>
               ICCV, 2023
               <br>
               <a href="https://arxiv.org/pdf/2307.13539.pdf"> paper </a>  /
               <a href="https://github.com/Carlisle-Liu/ASLP"> code </a>
               <p></p>
-	      <p> .For safety-related applications, it is crucial to produce trustworthy deep neural networks whose prediction is associated with confidence that can represent the likelihood of correctness for subsequent decision-making. Existing dense binary classification models are prone to being over-confident. To improve model calibration, we propose Adaptive Stochastic Label Perturbation (ASLP) which learns a unique label perturbation level for each training image. 
+	      <p> For safety-related applications, it is crucial to produce trustworthy deep neural networks whose prediction is associated with confidence that can represent the likelihood of correctness for subsequent decision-making. Existing dense binary classification models are prone to being over-confident. To improve model calibration, we propose Adaptive Stochastic Label Perturbation (ASLP) which learns a unique label perturbation level for each training image. 
               </p>
             </td>
         </tr>
@@ -136,7 +136,7 @@ The proposed method addresses limitations in existing cross-view localization me
               <br>
               <strong>Shan Wang</strong>, Yanhao Zhang, Akhil Perincherry, Ankit Vora, and Hongdong Li
               <br>
-              ICCV, 2023
+              ICRA, 2023
               <br>
               <a href="https://arxiv.org/abs/2207.13506"> paper </a>  /
               <a href="#"> code </a>
@@ -156,7 +156,7 @@ The proposed method addresses limitations in existing cross-view localization me
                 <papertitle>CVLNet: Cross-View Semantic Correspondence Learning for Video-based Camera Localization </papertitle>
               </a>
               <br>
-	      Yujiao Shi, Xin Yu, <strong>Shan Wang<strong>, and Hongdong Li
+	      Yujiao Shi, Xin Yu, <strong>Shan Wang</strong>, and Hongdong Li
               <br>
               ACCV, 2022
               <br>
