--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
               <p style="text-align:center">
                 <name>Shan Wang</name>
               </p>
-              <p>I am a Computer Vision PhD student at <a href="https://www.anu.edu.au">Australian National University (ANU)</a>, under the guidance of Dr. <a href="https://people.csiro.au/N/C/Chuong-Nguyen">Chuong Nguyen</a> and <a href="http://users.cecs.anu.edu.au/~hongdong/">Prof. Hongdong Li</a>. My research focuses on Autonomous Driving and 3D reconstruction. Prior to joining ANU,  I accumulated 16 years of experience as an embedded software engineer in the automobile industry.
+              <p>I am a Computer Vision PhD student at <a href="https://www.anu.edu.au">Australian National University (ANU)</a>, under the guidance of Dr. <a href="https://people.csiro.au/N/C/Chuong-Nguyen">Chuong Nguyen</a> and Prof. <a href="http://users.cecs.anu.edu.au/~hongdong/">Hongdong Li</a>. My research focuses on Autonomous Driving and 3D reconstruction. Prior to joining ANU,  I accumulated 16 years of experience as an embedded software engineer in the automobile industry.
               </p>
               <p style="text-align:center">
                 <a href="mailto:shan.wang@anu.edu.au">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?hl=en&user=3xT-7nsAAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="data/shan_CV">CV</a> &nbsp/&nbsp
-                <a href="https://github.com/ShanWang-Shan">Github</a> &nbsp/&nbsp
+                <a href="images/CV.pdf">CV</a> &nbsp/&nbsp
+                <a href="https://github.com/ShanWang-Shan">Github</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -63,7 +63,7 @@
 
 	<tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="data/PureACL" alt="PontTuset" width="160" style="border-style: none">
+              <img src="data/PureACL.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
               <a href="#">
@@ -77,15 +77,14 @@
               <a href="#"> paper </a>  /
               <a href="#"> project page </a>
               <p></p>
-              <p> This paper proposes a fine-grained self-localization method for outdoor robotics that utilizes a flexible number of onboard cameras and readily accessible satellite images. 
-The proposed method addresses limitations in existing cross-view localization methods that struggle to handle noise sources such as moving objects and seasonal variations, achieving significant performance improvement. 
+              <p> This paper proposes a fine-grained self-localization method for outdoor robotics that utilizes a flexible number of onboard cameras and readily accessible satellite images. The proposed method addresses limitations in existing cross-view localization methods that struggle to handle noise sources such as moving objects and seasonal variations, achieving significant performance improvement. 
               </p>
             </td>
         </tr>
 
 	<tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="data/HomoFusion" alt="PontTuset" width="160" style="border-style: none">
+              <img src="data/HomoFusion.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
               <a href="#">
@@ -106,7 +105,7 @@ The proposed method addresses limitations in existing cross-view localization me
 
 	<tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="data/Calibration" alt="PontTuset" width="160" style="border-style: none">
+              <img src="data/Calibration.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
               <a href="#">
@@ -127,7 +126,7 @@ The proposed method addresses limitations in existing cross-view localization me
 		
 	<tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="data/SIBCL" alt="PontTuset" width="160" style="border-style: none">
+              <img src="data/SIGL.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
               <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10161527">
