--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <img src="data/PureACL.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
-              <a href="#">
+              <a href="https://shanwang-shan.github.io/PureACL-website/">
                 <papertitle>View Consistent Purification for Accurate Cross-View Localization</papertitle>
               </a>
               <br>
@@ -74,8 +74,8 @@
               <br>
               ICCV, 2023
               <br>
-              <a href="#"> paper </a>  /
-              <a href="#"> project page </a>
+              <a href="https://shanwang-shan.github.io/PureACL-website/"> paper </a>  /
+              <a href="https://shanwang-shan.github.io/PureACL-website/"> project page </a>
               <p></p>
               <p> This paper proposes a fine-grained self-localization method for outdoor robotics that utilizes a flexible number of onboard cameras and readily accessible satellite images. The proposed method addresses limitations in existing cross-view localization methods that struggle to handle noise sources such as moving objects and seasonal variations, achieving significant performance improvement. 
               </p>
@@ -87,7 +87,7 @@
               <img src="data/HomoFusion.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
-              <a href="#">
+              <a href="https://github.com/ShanWang-Shan/HomoFusion">
                 <papertitle>Homography Guided Temporal Fusion for Road Line and Marking Segmentation</papertitle>
               </a>
               <br>
@@ -95,8 +95,8 @@
               <br>
               ICCV, 2023
               <br>
-              <a href="#"> paper </a>  /
-              <a href="#"> code </a>
+              <a href="https://github.com/ShanWang-Shan/HomoFusion"> paper </a>  /
+              <a href="https://github.com/ShanWang-Shan/HomoFusion"> code </a>
               <p></p>
 	      <p> Reliable segmentation of road lines and markings is critical to autonomous driving. Our work is motivated by the observations that road lines and markings are (1) frequently occluded in the presence of moving vehicles, shadow, and glare and (2) highly structured with low intra-class shape variance and overall high appearance consistency. To solve these issues, we propose a Homography Guided Fusion (HomoFusion) module to exploit temporally-adjacent video frames for complementary cues facilitating the correct classification of the partially occluded road lines or markings.
               </p>
@@ -108,7 +108,7 @@
               <img src="data/Calibration.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
-              <a href="#">
+              <a href="https://arxiv.org/pdf/2307.13539.pdf">
                 <papertitle>Model Calibration in Dense Classification with Adaptive Label Perturbation</papertitle>
               </a>
               <br>
@@ -133,12 +133,12 @@
                 <papertitle>Satellite image based cross-view localization for autonomous vehicle</papertitle>
               </a>
               <br>
-              <strong>Shan Wang</strong>, Yanhao Zhang, Akhil Perincherry, Ankit Vora, and Hongdong Li
+              <strong>Shan Wang</strong>, Yanhao Zhang, Ankit Vora, Akhil Perincherry, and Hongdong Li
               <br>
               ICRA, 2023
               <br>
               <a href="https://arxiv.org/abs/2207.13506"> paper </a>  /
-              <a href="#"> code </a>
+              <a href="https://shanwang-shan.github.io/SIBCL-website/"> project page </a>
               <p></p>
 	      <p> Existing spatial localization techniques for autonomous vehicles mostly use a pre-built 3D-HD map, often constructed using a survey-grade 3D mapping vehicle, which is not only expensive but also laborious. This paper shows that by using an off-the-shelf high-definition satellite image as a ready-to-use map, we are able to achieve cross-view vehicle localization up to a satisfactory accuracy, providing a cheaper and more practical way for localization. Our method is validated on KITTI and Ford Multi-AV Seasonal datasets as ground view and Google Maps as the satellite view. The results demonstrate the superiority of our method in cross-view localization with median spatial and angular errors within 1 meter and 1∘, respectively.
               </p>
