add PureACL arxiv

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <br>
               ICCV, 2023
               <br>
-              <a href="https://shanwang-shan.github.io/PureACL-website/"> paper </a>  /
+              <a href="https://arxiv.org/abs/2308.08110"> paper </a>  /
               <a href="https://shanwang-shan.github.io/PureACL-website/"> project page </a>
               <p></p>
               <p> This paper proposes a fine-grained self-localization method for outdoor robotics that utilizes a flexible number of onboard cameras and readily accessible satellite images. The proposed method addresses limitations in existing cross-view localization methods that struggle to handle noise sources such as moving objects and seasonal variations, achieving significant performance improvement. 
