--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <p style="text-align:center">
                 <a href="mailto:shan.wang@anu.edu.au">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?hl=en&user=3xT-7nsAAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="images/CV.pdf">CV</a> &nbsp/&nbsp
+		<a href="https://www.linkedin.com/in/shan-wang-375b3397/">Linkedin</a> &nbsp/&nbsp
                 <a href="https://github.com/ShanWang-Shan">Github</a> 
               </p>
             </td>
