--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <img src="data/PureACL.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://shanwang-shan.github.io/PureACL-website/">
+              <a href="https://openaccess.thecvf.com/content/ICCV2023/html/Wang_View_Consistent_Purification_for_Accurate_Cross-View_Localization_ICCV_2023_paper.html">
                 <papertitle>View Consistent Purification for Accurate Cross-View Localization</papertitle>
               </a>
               <br>
@@ -87,7 +87,7 @@
               <img src="data/HomoFusion.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://github.com/ShanWang-Shan/HomoFusion">
+              <a href="https://openaccess.thecvf.com/content/ICCV2023/html/Wang_Homography_Guided_Temporal_Fusion_for_Road_Line_and_Marking_Segmentation_ICCV_2023_paper.html">
                 <papertitle>Homography Guided Temporal Fusion for Road Line and Marking Segmentation</papertitle>
               </a>
               <br>
@@ -95,7 +95,7 @@
               <br>
               ICCV, 2023
               <br>
-              <a href="https://github.com/ShanWang-Shan/HomoFusion"> paper </a>  /
+              <a href="https://openaccess.thecvf.com/content/ICCV2023/html/Wang_Homography_Guided_Temporal_Fusion_for_Road_Line_and_Marking_Segmentation_ICCV_2023_paper.html"> paper </a>  /
               <a href="https://github.com/ShanWang-Shan/HomoFusion"> code </a>
               <p></p>
 	      <p> Reliable segmentation of road lines and markings is critical to autonomous driving. Our work is motivated by the observations that road lines and markings are (1) frequently occluded in the presence of moving vehicles, shadow, and glare and (2) highly structured with low intra-class shape variance and overall high appearance consistency. To solve these issues, we propose a Homography Guided Fusion (HomoFusion) module to exploit temporally-adjacent video frames for complementary cues facilitating the correct classification of the partially occluded road lines or markings.
