--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
 
 	<tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="data/LGI.png" alt="PontTuset" width="160" style="border-style: none">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://arxiv.org/pdf/2509.03113">
+                <papertitle>Shadow and Relighting</papertitle>
+              </a>
+              <br>
+              <strong>Shan Wang</strong>, Peixia Li, Chenchen Xu, Ziang Cheng, Jiayu Yang, Hongdong Li and Pulak Purkait
+              <br>
+              Under Review
+              <br>
+              <a href="https://arxiv.org/pdf/2509.03113"> paper </a> 
+              <p></p>
+              <p> under review </p>
+            </td>
+        </tr>
+			
+	<tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="data/GACD.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
@@ -74,7 +93,7 @@
               <br>
               Arxiv
               <br>
-              <a href="https://arxiv.org/pdf/2509.03113"> paper </a>  /
+              <a href="https://arxiv.org/pdf/2509.03113"> paper </a> 
               <p></p>
               <p> Multimodal large language models (MLLMs) achieve strong performance across diverse tasks but remain prone to hallucinations, where outputs are not grounded in visual inputs. This issue can be attributed to two main biases: text–visual bias, the overreliance on prompts and prior outputs, and co-occurrence bias, spurious correlations between frequently paired objects. We propose Gradient-based Influence-Aware Constrained Decoding (GACD), an inference-based method, that addresses both biases without auxiliary models, and is readily applicable to existing models without finetuning. The core of our approach is bias estimation, which uses first-order Taylor gradients to understand the contribution of individual tokens—visual features and text tokens—to the current output. Based on this analysis, GACD mitigates hallucinations through two components: (1) suppressing spurious visual features correlated with the output objects, and (2) rebalancing cross-modal contributions by strengthening visual features relative to text. Experiments across multiple benchmarks demonstrate that GACD effectively reduces hallucinations and improves the visual grounding of MLLMs outputs.
 			  </p>
