--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
               <img src="data/LGI.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://arxiv.org/pdf/2509.03113">
+              <a href="https://arxiv.org/pdf/">
                 <papertitle>Shadow and Relighting</papertitle>
               </a>
               <br>
               <strong>Shan Wang</strong>, Peixia Li, Chenchen Xu, Ziang Cheng, Jiayu Yang, Hongdong Li and Pulak Purkait
               <br>
-              Under Review
+              Wait for review results
               <br>
-              <a href="https://arxiv.org/pdf/2509.03113"> paper </a> 
+              <a href="https://arxiv.org/pdf/"> paper </a> 
               <p></p>
-              <p> under review </p>
+              <p> Wait for review results </p>
             </td>
         </tr>
 			
@@ -113,7 +113,7 @@
               <br>
               CVPR, 2024
               <br>
-              <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Wang_View_From_Above_Orthogonal-View_aware_Cross-view_Localization_CVPR_2024_paper.pdf"> paper </a>  /
+              <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Wang_View_From_Above_Orthogonal-View_aware_Cross-view_Localization_CVPR_2024_paper.pdf"> paper </a>
               <p></p>
               <p> This paper presents a novel aerial-to-ground feature aggregation strategy, tailored for the task of cross-view image-based geo-localization. Conventional vision-based methods heavily rely on matching ground-view image features with a pre-recorded image database, often through establishing planar homography correspondences via a planar ground assumption. As such, they tend to ignore features that are off-ground and not suited for handling visual occlusions, leading to unreliable localization in challenging scenarios. WeproposeaTop-to-Ground Aggregation (T2GA)module that capitalizes aerial orthographic views to aggregate features down to the ground level, leveraging reliable off-ground information to improve feature alignment. Furthermore, we introduce a Cycle Domain Adaptation (CycDA) loss that ensures feature extraction robustness across domain changes. Additionally, an Equidistant Re-projection (ERP) loss is introduced to equalize the impact of all keypoints on orientation error, leading to a more extended distribution of keypoints, which benefits orientation estimation. On both KITTI and Ford Multi-AV datasets, our method consistently achieves the lowest mean longitudinal and lateral translations across different settings and obtains the smallest orientation error when the initial pose is less accurate, a more challenging setting. Further, it can complete an entire route through continual vehicle pose estimation with initial vehicle pose given only at the starting point.
 			  </p>
