--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
               <img src="data/LGI.png" alt="PontTuset" width="160" style="border-style: none">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://arxiv.org/pdf/">
-                <papertitle>Shadow and Relighting</papertitle>
+              <a href="https://openreview.net/pdf?id=yrVAA0czRz">
+                <papertitle>Joint Shadow Generation and Relighting via Light-Geometry Interaction Maps</papertitle>
               </a>
               <br>
               <strong>Shan Wang</strong>, Peixia Li, Chenchen Xu, Ziang Cheng, Jiayu Yang, Hongdong Li and Pulak Purkait
               <br>
-              Wait for review results
+              ICLR, 2026
               <br>
-              <a href="https://arxiv.org/pdf/"> paper </a> 
+              <a href="oint Shadow Generation and Relighting via Light-Geometry Interaction Maps"> paper </a> 
               <p></p>
-              <p> Wait for review results </p>
+              <p> We propose Light–Geometry Interaction (LGI) maps, a novel representation that encodes light-aware occlusion from monocular depth. Unlike ray tracing, which requires full 3D reconstruction, LGI captures essential light–shadow interactions reliably and accurately, computed from off-the-shelf 2.5D depth map predictions. LGI explicitly ties illumination direction to geometry, providing a physics-inspired prior that constrains generative models. Without such prior, these models often produce floating shadows, inconsistent illumination, and implausible shadow geometry. Building on this representation, we propose a unified pipeline for joint shadow generation and relighting-unlike prior methods that treat them as disjoint tasks-capturing the intrinsic coupling of illumination and shadowing essential for modeling indirect effects. By embedding LGI into a bridge-matching generative backbone, we reduce ambiguity and enforce physically consistent light–shadow reasoning. To enable effective training, we curated the first large-scale benchmark dataset for joint shadow and relighting, covering reflections, transparency, and complex interreflections. Experiments show significant gains in realism and consistency across synthetic and real images. LGI thus bridges geometry-inspired rendering with generative modeling, enabling efficient, physically consistent shadow generation and relighting.  </p>
             </td>
         </tr>
 			
@@ -91,7 +91,7 @@
               <br>
               <strong>Shan Wang</strong>, Maying Shen, Nadine Chang, Chuong Nguyen, Hongdong Li and Jose M Alvarez
               <br>
-              Arxiv
+              CVPR, 2026
               <br>
               <a href="https://arxiv.org/pdf/2509.03113"> paper </a> 
               <p></p>
